# chetan-legacy

./: .gitignore  README.md  pyproject.toml  setup.py
demos/: demo.ipynb
src/chetan/: __init__.py  utils.py
src/chetan/actions/: __init__.py
src/chetan/core/: __init__.py  tool.py  types.py
src/chetan/core/context/: __init__.py  iteration.py  system.prompt.txt
src/chetan/core/loop/: __init__.py
src/chetan/lm/: __init__.py  groq.py  llama_cpp.py  ollama.py  openai.py
src/chetan/multi_agent/: __init__.py
